# UnnamedBot

./: .env  .gitignore  Cargo.toml  UnnamedBot.example.toml
migrations/2022-03-29-194609_create_users/: up.sql
migrations/2022-03-29-194620_create_reminders/: up.sql
migrations/2022-03-29-194624_create_aliases/: up.sql
src/: config.rs  database.rs  main.rs  schema.rs  util.rs
src/bot/: handler.rs  hooks.rs  mod.rs
src/bot/commands/: alias.rs  hyena.rs  image.rs  mod.rs
src/bot/commands/image/: filter.rs  ifunny.rs  mod.rs
src/dashboard/: mod.rs
src/models/: alias.rs  mod.rs  reminder.rs  user.rs
