[package]
name = "unnamed_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.6"
figment = { version = "0.10.6", features = ["toml", "env", "json", "yaml"]}
flexi_logger = "0.22.3"
image = "0.24.1"
log = "0.4.14"
reqwest = "0.11.9"
serde = "1.0.135"
serde_derive = "1.0.135"
serde_json = "1.0.79"
serenity = "0.10.10"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
try-traits = "0.1.1"
webp = "0.2.1"
